--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "ipr-frontend",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://192.168.215.54:5000/" ,
   "dependencies": {
     "@chakra-ui/react": "^1.6.7",
     "@emotion/react": "^11.4.1",
@@ -13,6 +14,7 @@
     "@solana/wallet-adapter-react": "^0.8.3",
     "@solana/wallet-adapter-wallets": "^0.7.3",
     "@solana/web3.js": "^1.24.1",
+    "@tanstack/react-table": "^8.8.5",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^10.4.9",
     "@testing-library/user-event": "^12.8.3",
